# lsext

./: .gitignore  .gitmodules  Jenkinsfile  Makefile  README.md  lsext.ini.sample  test.sh
src/: CMakeLists.txt  entry.cpp  entry.hpp  gsl-lite.h  main.cpp
src/cmake/: FindIniparser.cmake  Findgit2.cmake  Findlibtcmalloc.cmake
